# AgroLogic

./: CMakeLists.txt  CMakePresets.json
examples/: CMakeLists.txt
examples/example_add/: CMakeLists.txt
examples/example_geometry/: CMakeLists.txt  main.cpp
include/mylib/: geometry.h
src/: geometry.cpp  mylib.cpp
tests/: CMakeLists.txt  geometry_test.cpp
